--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.profiles.active=test
 default.sender=nelio.cursos@gmail.com
 default.recipient=nelio.cursos@gmail.com
 
+#Utilizado na autenticação para embaralhar e tempo para expirar token
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=86400000
+jwt.expiration=600000
 
 aws.access_key_id=
 aws.secret_access_key=
